--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/anglinb/glitch-cd-example-app#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "glitch-cd": "https://github.com/anglinb/glitch-cd.git#3d9140c3be008ce3188f7699e59262f0c216aa75"
   }
 }
